DS-486 fix link state contrast for light-blue-bg in dark mode

--- a/source/_patterns/01-atoms/background-color/_background-color-mixins.scss
+++ b/source/_patterns/01-atoms/background-color/_background-color-mixins.scss
@@ -189,6 +189,12 @@ Gray, blue, and green backgrounds are gray based.
     &:visited {
       color: var(--white);
       text-decoration-color: var(--purple--lighter--60);
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: var(--black);
+      }
     }
 
     &:hover,
